--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.18",
+    "@types/redux": "^3.6.0",
+    "firebase": "^9.0.2",
+    "firebase-tools": "^9.18.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-firebaseui": "^5.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
